# conway-life

./: .gitignore  CMakeLists.txt  fragment.glsl  main.cpp  mobius.cpp  mobiusEdgesCompute.glsl  mobiusFragment.glsl  mobiusLifeCompute.glsl  mobiusTexCompute.glsl  mobiusTexFragment.glsl  mobiusVertex.glsl  texCompute.glsl  vertex.glsl
lib/glad/: glad.c  glad.h
